# near-contracts

./: rust-toolchain.toml
faucet_contract/: Cargo.toml
faucet_contract/src/: lib.rs
ft_contract/: Cargo.toml
ft_contract/src/: lib.rs
