[package]
name = "ft_contract"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/chtonad0000/near-contracts"
[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.24.1"
near-contract-standards = "5.24.1"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.11.0-rust-1.82.0"
image_digest = "sha256:6af67e796ff7182f6b184031f9e95d792f97b66693698abc51b4630acac0bf83"
container_build_command = ["cargo", "near", "build"]
